--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-cli": "^4.9.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "webpack-dev-server": "^4.7.4"
   }
 }
